<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BoxScoreEditorDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:id="@+id/lay_BoxScoreEditorDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    
    <LinearLayout
        android:id="@+id/lay_OldAndNewScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8sp"
        android:paddingBottom="16sp"
        >
        
        <TextView
            android:id="@+id/txt_OldScore"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_OldScore"
            android:textSize="22sp"
            android:layout_weight="1"
            />
    
        <TextView
            android:id="@+id/txt_NewScore"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_NewScore"
            android:textSize="22sp"
            android:layout_weight="1"
            />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/lay_HeartCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    
        <NumberPicker
            android:id="@+id/npk_HeartCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:inputType="number"
            />
        
        <ImageView
            android:id="@+id/img_Heart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:scaleType="center"
            android:src="@drawable/icon_heart"
            android:contentDescription="@string/lbl_HeartCount"
            />
    
        <LinearLayout
            android:id="@+id/lay_Marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
                        
            <RadioGroup
                android:id="@+id/radg_SpecialMarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                
                <RadioButton
                    android:id="@+id/rad_NewMoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_NewMoon"
                    />
                                
                <RadioButton
                    android:id="@+id/rad_FullMoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_FullMoon"
                    />
                
                <RadioButton
                    android:id="@+id/rad_FullMoonVictim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_FullMoonVictim"
                    />
                
                <RadioButton
                    android:id="@+id/rad_HalfMoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_HalfMoon"
                    android:visibility="gone"
                    />
                
                <RadioButton
                    android:id="@+id/rad_HalfMoonVictim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_HalfMoonVictim"
                    android:visibility="gone"
                    />
                
                <RadioButton
                    android:id="@+id/rad_NormalHand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rad_NormalHand"
                    />
                
            </RadioGroup>
            
            <CheckBox
                android:id="@+id/chk_Failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Failed"
                />
                
            <CheckBox
                android:id="@+id/chk_NullHand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_NullHand"
                />
            
            <CheckBox
                android:id="@+id/chk_Queen1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Queen1"
                />
    
            <CheckBox
                android:id="@+id/chk_Queen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Queen2"
                android:visibility="gone"
                />
    
            <CheckBox
                android:id="@+id/chk_Omnibus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Omnibus1"
                android:visibility="gone"
                />

            <CheckBox
                android:id="@+id/chk_Omnibus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Omnibus2"
                android:visibility="gone"
                />
    
            <CheckBox
                android:id="@+id/chk_Hooligan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Hooligan1"
                android:visibility="gone"
                />

            <CheckBox
                android:id="@+id/chk_Hooligan2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Hooligan2"
                android:visibility="gone"
                />
            
            <CheckBox
                android:id="@+id/chk_Angel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Angel"
                />
            
            <CheckBox 
                android:id="@+id/chk_Dagger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Dagger"
                />
            
            <CheckBox
                android:id="@+id/chk_Fisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Fisher"
                />
            
            <CheckBox 
                android:id="@+id/chk_Poisoner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_Poisoner"
                />
            
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>

</ScrollView>
